--- a/res/layout/listview.xml
+++ b/res/layout/listview.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+<EditText android:id="@+id/inputSearch"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search medicines ..."
+        android:inputType="textVisiblePassword"/>
+<ListView
     android:id="@+id/listview"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
 
 </ListView>
+</LinearLayout>
