--- a/res/layout/two_item_view.xml
+++ b/res/layout/two_item_view.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
-    <TextView
-        android:id="@+id/right"
-        android:layout_alignParentRight="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        ></TextView>
+    android:orientation="horizontal" >
+    
     <TextView
         android:id="@+id/left"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/right"
-        android:layout_width="wrap_content"
+        android:layout_width="40dip"
+        android:textSize="12sp"
         android:layout_height="wrap_content"
+        android:paddingRight="5dip"
+		></TextView>
+	<TextView
+        android:id="@+id/right"
+        android:textSize="12sp"
+        android:layout_width="100dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         ></TextView>
-
-</RelativeLayout>
+</LinearLayout>
