--- a/res/layout/two_item_view.xml
+++ b/res/layout/two_item_view.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
     
     <TextView
         android:id="@+id/left"
-        android:layout_width="40dip"
+        android:layout_width="70dip"
         android:textSize="12sp"
         android:layout_height="wrap_content"
         android:paddingRight="5dip"
+        android:paddingLeft="10dip"
 		></TextView>
 	<TextView
         android:id="@+id/right"
         android:textSize="12sp"
-        android:layout_width="100dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:paddingRight="0dip"
         ></TextView>
 </LinearLayout>
